--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.compare-bg {
+  background: url("/pattern-bg.png") lightgray 50% / cover no-repeat,
+    rgba(22, 219, 170, 0.15);
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -12,8 +17,8 @@
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 179 71% 28%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 203 63% 12%;
+    --secondary-foreground: 210 40% 98%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
